--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://xibjrt.giithub.io/KABADA-first",
+  "homepage":"http://xibjrt.github.io/KABADA-first",
   "name": "projektas",
   "version": "0.1.0",
   "private": true,
